--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>🎱 행운의 로또</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-
-  <body>
-    <div id="app" />
-  </body>
-</html>
+<!doctype html><html lang="ko"><head><meta charset="UTF-8"/><title>🎱 행운의 로또</title><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Document</title><script defer="defer" src="step2-bundle.js"></script></head><body><div id="app"/></body></html>
